kiddie filter map

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -62,6 +62,7 @@ map_index:
         title: 'Filters'
         manufacturer: 'Manufacturer'
         status: 'Operating'
+        kiddie: 'Hide kiddies'
         notridden: 'Not ridden yet'
         score: 'Score'
         atleast: 'at least %count%'
