count kiddie in park

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -46,6 +46,7 @@ coaster:
 
 park:
     opened_coasters: 'opened coaster|opened coasters'
+    kiddies: 'kiddie|kiddies'
 
 coaster_ranking:
     title: 'Ranking of the best coasters'
