add stat service

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -14,8 +14,8 @@ index:
     stats:
         coasters: 'coasters'
         ratings: 'ratings'
-        rails: 'km of track'
-        inversions: 'inversions'
+        reviews: 'reviews'
+        listes: 'top coasters'
 
 coaster:
     rating:
