--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -212,6 +212,23 @@ badge:
     teamkatun: 'Team Katun'
     teamispeed: 'Team iSpeed'
 
+report:
+    new:
+        title: 'My Park Report'
+        description: ''
+    info:
+        header: 'Share your visit with us !'
+        text: 'You spent a beautiful day in a park and you want to share it with us ? Or was it a
+                total nightmare ? Tell us everything you liked and disliked about your visit. After
+                you gave us some infos, we will go to the next step.'
+    form:
+        first: 'First of all :'
+        park: 'Park visited'
+        visitdate: 'Date of the visit'
+        language: 'Language'
+        conditions: 'I accept the Conditions of Use of Captain Coaster.'
+        nextstep: 'Start writing my review !'
+
 error:
     404:
         title: 'Page not found'
