fixes (upload image)

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -235,6 +235,7 @@ report:
         language: 'Language'
         conditions: 'I accept the Conditions of Use of Captain Coaster.'
         nextstep: 'Start writing my review !'
+        title: 'Title'
 
 error:
     404:
