--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -225,6 +225,7 @@ report:
         language: 'Langue du TR'
         conditions: 'J''accepte les conditions de Captain Coaster.'
         nextstep: 'Commencer à écrire !'
+        title: 'Titre'
 
 
 
