--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -124,7 +124,7 @@ me:
 
 liste:
     list:
-        title: 'The lastest Tops'
+        title: 'The latest Tops'
         more: 'See more'
         updated: 'last updated'
         by: 'by'
