refact database trads

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -1,14 +1,14 @@
-Lift à chaîne: 'Chain lift hill'
-Lift à pneus: 'Booster wheel lift hill'
-Lift à câble: 'Cable lift hill'
-Lift en vis d'Archimède: 'Spiral lift'
-Lift électrique: 'Electrical lift hill'
-Ascenseur vertical: 'Vertical lift'
-Propulsion magnétique (LIM/LSM): 'Magnetic Launch (LIM/LSM)'
-Propulsion à câble (hydraulique): 'Hydraulic cable launch'
-Propulsion à câble (pneumatique): 'Compressed air launch'
-Propulsion à pneus: 'Tire propelled launch'
-Propulsion électrique: 'Electrical launch'
+launch.lift.chain: 'Chain lift hill'
+launch.lift.wheel: 'Booster wheel lift hill'
+launch.lift.cable: 'Cable lift hill'
+launch.lift.spiral: 'Spiral lift'
+launch.lift.electrical: 'Electrical lift hill'
+launch.lift.vertical: 'Vertical lift'
+launch.lim: 'Magnetic Launch (LIM/LSM)'
+launch.hydraulic: 'Hydraulic cable launch'
+launch.air: 'Compressed air launch'
+launch.tire: 'Tire propelled launch'
+launch.electrical: 'Electrical launch'
 
 Vibrations: 'Rattle'
 Baffes: 'Headbanging'
@@ -37,66 +37,68 @@ Temps mort: 'Dead spots'
 Fluidité: 'Smoothness'
 Layout: 'Layout'
 
-Aucun: 'None'
-Flying Coaster: 'Flying Coaster'
-Harnais: 'Shoulder restraint'
-Harnais commun: 'Common Shoulder restraint'
-Lap Bar commune: 'Common lap bar'
-Lap Bar individuelle: 'Lap bar'
-N/A: 'N/A'
+restraint.none: 'None'
+restraint.flying: 'Flying Coaster'
+restraint.shoulder: 'Shoulder restraint'
+restraint.shoulder.common: 'Common Shoulder restraint'
+restraint.lap.common: 'Common lap bar'
+restraint.lap: 'Lap bar'
+restraint.na: 'N/A'
 
-Annoncé: 'Announced'
-Délocalisé: 'Relocated'
-En chantier: 'Under construction'
-En fonctionnement: 'Operating'
-Fermé définitivement: 'Definitely closed'
-Fermé temporairement: 'Temporarily closed'
-Inconnu: 'Unknown'
-Retracké: 'Retracked'
+status.announced: 'Announced'
+status.relocated: 'Relocated'
+status.construction: 'Under construction'
+status.operating: 'Operating'
+status.closed.definitely: 'Definitely closed'
+status.closed.temporarily: 'Temporarily closed'
+status.unknown: 'Unknown'
+status.retracked: 'Retracked'
 
-Espagne: 'Spain'
-Italie: 'Italy'
-Suède: 'Sweden'
-France: 'France'
-Pays-Bas: 'Netherlands'
-Belgique: 'Belgium'
-Autriche: 'Austria'
-Finlande: 'Finland'
-Norvège: 'Norway'
-Danemark: 'Denmark'
-Suisse: 'Swiss'
-Royaume-Uni: 'United Kingdom'
-Allemagne: 'Germany'
-États-Unis: 'United States'
-Japon: 'Japan'
-Canada: 'Canada'
-Taiwan: 'Taiwan'
-Corée du Sud: 'South Korea'
-Australie: 'Australia'
-Russie: 'Russia'
-Colombie: 'Colombia'
-Mexique: 'Mexico'
-Guatemala: 'Guatemala'
-Ukraine: 'Ukraine'
-Chine: 'China'
-Hongrie: 'Hungary'
-Israël: 'Israel'
-Malaisie: 'Malaysia'
-Portugal: 'Portugal'
-Argentine: 'Argentina'
-Brésil: 'Brazil'
-Thaïlande: 'Thailand'
-Pologne: 'Poland'
-Vietnam: 'Vietnam'
-Turquie: 'Turkey'
-Afrique du Sud: 'South Africa'
-Singapour: 'Singapour'
-Pérou: 'Peru'
-Émirats arabes unis: 'United Arab Emirates'
-Qatar: 'Qatar'
-Inde: 'India'
-Indonésie: 'Indonesia'
-Irak: 'Irak'
-Nouvelle-Zélande: 'New Zealand'
-Liban: 'Lebanon'
-N/A: 'N/A'
+country.spain: 'Spain'
+country.italy: 'Italy'
+country.sweden: 'Sweden'
+country.france: 'France'
+country.netherlands: 'Netherlands'
+country.belgium: 'Belgium'
+country.austria: 'Austria'
+country.finland: 'Finland'
+country.norway: 'Norway'
+country.denmark: 'Denmark'
+country.switzerland: 'Switzerland'
+country.uk: 'United Kingdom'
+country.germany: 'Germany'
+country.usa: 'United States'
+country.japan: 'Japan'
+country.canada: 'Canada'
+country.taiwan: 'Taiwan'
+country.southkorea: 'South Korea'
+country.australia: 'Australia'
+country.russia: 'Russia'
+country.colombia: 'Colombia'
+country.mexico: 'Mexico'
+country.guatemala: 'Guatemala'
+country.ukraine: 'Ukraine'
+country.china: 'China'
+country.hungary: 'Hungary'
+country.israel: 'Israel'
+country.malaysia: 'Malaysia'
+country.portugal: 'Portugal'
+country.argentina: 'Argentina'
+country.brazil: 'Brazil'
+country.thailand: 'Thailand'
+country.poland: 'Poland'
+country.vietnam: 'Vietnam'
+country.turkey: 'Turkey'
+country.southafrica: 'South Africa'
+country.singapore: 'Singapore'
+country.peru: 'Peru'
+country.uae: 'United Arab Emirates'
+country.qatar: 'Qatar'
+country.india: 'India'
+country.indonesia: 'Indonesia'
+country.iraq: 'Iraq'
+country.newzealand: 'New Zealand'
+country.lebanon: 'Lebanon'
+country.na: 'N/A'
+country.burma: 'Burma'
+country.cyprus: 'Cyprus'
