--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -1,14 +1,14 @@
-Lift à chaîne: 'Lift à chaîne'
-Lift à pneus: 'Lift à pneus'
-Lift à câble: 'Lift à câble'
-Lift en vis d'Archimède: 'Lift en vis d''Archimède'
-Lift électrique: 'Lift électrique'
-Ascenseur vertical: 'Ascenseur vertical'
-Propulsion magnétique (LIM/LSM): 'Propulsion magnétique (LIM/LSM)'
-Propulsion à câble (hydraulique): 'Propulsion à câble (hydraulique)'
-Propulsion à câble (pneumatique): 'Propulsion à câble (pneumatique)'
-Propulsion à pneus: 'Propulsion à pneus'
-Propulsion électrique: 'Propulsion électrique'
+launch.lift.chain: 'Lift à chaîne'
+launch.lift.wheel: 'Lift à pneus'
+launch.lift.cable: 'Lift à câble'
+launch.lift.spiral: 'Lift en vis d''Archimède'
+launch.lift.electrical: 'Lift électrique'
+launch.lift.vertical: 'Ascenseur vertical'
+launch.lim: 'Propulsion magnétique (LIM/LSM)'
+launch.hydraulic: 'Propulsion à câble (hydraulique)'
+launch.air: 'Propulsion à câble (pneumatique)'
+launch.tire: 'Propulsion à pneus'
+launch.electrical: 'Propulsion électrique'
 
 Vibrations: 'Vibrations'
 Baffes: 'Baffes'
@@ -37,66 +37,69 @@ Temps mort: 'Temps mort'
 Fluidité: 'Fluidité'
 Layout: 'Layout'
 
-Aucun: 'Aucun'
-Flying Coaster: 'Flying Coaster'
-Harnais: 'Harnais'
-Harnais commun: 'Harnais commun'
-Lap Bar commune: 'Lap Bar commune'
-Lap Bar individuelle: 'Lap Bar individuelle'
-N/A: 'N/A'
+restraint.none: 'Aucun'
+restraint.flying: 'Flying Coaster'
+restraint.shoulder: 'Harnais'
+restraint.shoulder.common: 'Harnais commun'
+restraint.lap.common: 'Lap Bar commune'
+restraint.lap: 'Lap Bar individuelle'
+restraint.na: 'N/A'
 
-Annoncé: 'Annoncé'
-Délocalisé: 'Délocalisé'
-En chantier: 'En chantier'
-En fonctionnement: 'En fonctionnement'
-Fermé définitivement: 'Fermé définitivement'
-Fermé temporairement: 'Fermé temporairement'
-Inconnu: 'Inconnu'
-Retracké: 'Retracké'
+status.announced: 'Annoncé'
+status.relocated: 'Délocalisé'
+status.construction: 'En chantier'
+status.operating: 'En fonctionnement'
+status.closed.definitely: 'Fermé définitivement'
+status.closed.temporarily: 'Fermé temporairement'
+status.unknown: 'Inconnu'
+status.retracked: 'Retracké'
 
-Espagne: 'Espagne'
-Italie: 'Italie'
-Suède: 'Suède'
-France: 'France'
-Pays-Bas: 'Pays-Bas'
-Belgique: 'Belgique'
-Autriche: 'Autriche'
-Finlande: 'Finlande'
-Norvège: 'Norvège'
-Danemark: 'Danemark'
-Suisse: 'Suisse'
-Royaume-Uni: 'Royaume-Uni'
-Allemagne: 'Allemagne'
-États-Unis: 'États-Unis'
-Japon: 'Japon'
-Canada: 'Canada'
-Taiwan: 'Taiwan'
-Corée du Sud: 'Corée du Sud'
-Australie: 'Australie'
-Russie: 'Russie'
-Colombie: 'Colombie'
-Mexique: 'Mexique'
-Guatemala: 'Guatemala'
-Ukraine: 'Ukraine'
-Chine: 'Chine'
-Hongrie: 'Hongrie'
-Israël: 'Israël'
-Malaisie: 'Malaisie'
-Portugal: 'Portugal'
-Argentine: 'Argentine'
-Brésil: 'Brésil'
-Thaïlande: 'Thaïlande'
-Pologne: 'Pologne'
-Vietnam: 'Vietnam'
-Turquie: 'Turquie'
-Afrique du Sud: 'Afrique du Sud'
-Singapour: 'Singapour'
-Pérou: 'Pérou'
-Émirats arabes unis: 'Émirats arabes unis'
-Qatar: 'Qatar'
-Inde: 'Inde'
-Indonésie: 'Indonésie'
-Irak: 'Iraq'
-Nouvelle-Zélande: 'Nouvelle-Zélande'
-Liban: 'Liban'
-N/A: 'N/A'
+country.spain: 'Espagne'
+country.italy: 'Italie'
+country.sweden: 'Suède'
+country.france: 'France'
+country.netherlands: 'Pays-Bas'
+country.belgium: 'Belgique'
+country.austria: 'Autriche'
+country.finland: 'Finlande'
+country.norway: 'Norvège'
+country.denmark: 'Danemark'
+country.switzerland: 'Suisse'
+country.uk: 'Royaume-Uni'
+country.germany: 'Allemagne'
+country.usa: 'États-Unis'
+country.japan: 'Japon'
+country.canada: 'Canada'
+country.taiwan: 'Taiwan'
+country.southkorea: 'Corée du Sud'
+country.australia: 'Australie'
+country.russia: 'Russie'
+country.colombia: 'Colombie'
+country.mexico: 'Mexique'
+country.guatemala: 'Guatemala'
+country.ukraine: 'Ukraine'
+country.china: 'Chine'
+country.hungary: 'Hongrie'
+country.israel: 'Israël'
+country.malaysia: 'Malaisie'
+country.portugal: 'Portugal'
+country.argentina: 'Argentine'
+country.brazil: 'Brésil'
+country.thailand: 'Thaïlande'
+country.poland: 'Pologne'
+country.vietnam: 'Vietnam'
+country.turkey: 'Turquie'
+country.southafrica: 'Afrique du Sud'
+country.singapore: 'Singapour'
+country.peru: 'Pérou'
+country.uae: 'Émirats arabes unis'
+country.qatar: 'Qatar'
+country.india: 'Inde'
+country.indonesia: 'Indonésie'
+country.iraq: 'Irak'
+country.newzealand: 'Nouvelle-Zélande'
+country.lebanon: 'Liban'
+country.na: 'N/A'
+country.burma: 'Birmanie'
+country.cyprus: 'Chypre'
+
