--- a/app/Resources/translations/database.es.yml
+++ b/app/Resources/translations/database.es.yml
@@ -1,14 +1,14 @@
-Lift à chaîne: 'Ascensor de cadena'
-Lift à pneus: 'Ascensor de neumáticos'
-Lift à câble: 'Ascensor de cable'
-Lift en vis d'Archimède: 'Ascensor espiral'
-Lift électrique: 'Ascensor eléctrico'
-Ascenseur vertical: 'Ascensor vertical'
-Propulsion magnétique (LIM/LSM): 'Motor de inducción lineal (LIM) / Motor síncrino lineal (LSM)'
-Propulsion à câble (hydraulique): 'Lanzamiento hidráulico'
-Propulsion à câble (pneumatique): 'Lanzamiento con aire comprimido'
-Propulsion à pneus: 'Lanzamiento neumático'
-Propulsion électrique: 'Lanzamiento eléctrico'
+launch.lift.chain: 'Ascensor de cadena'
+launch.lift.wheel: 'Ascensor de neumáticos'
+launch.lift.cable: 'Ascensor de cable'
+launch.lift.spiral: 'Ascensor espiral'
+launch.lift.electrical: 'Ascensor eléctrico'
+launch.lift.vertical: 'Ascensor vertical'
+launch.lim: 'Motor de inducción lineal (LIM) / Motor síncrino lineal (LSM)'
+launch.hydraulic: 'Lanzamiento hidráulico'
+launch.air: 'Lanzamiento con aire comprimido'
+launch.tire: 'Lanzamiento neumático'
+launch.electrical: 'Lanzamiento eléctrico'
 
 Vibrations: 'Vibración'
 Baffes: 'Torta'
@@ -37,66 +37,69 @@ Temps mort: 'Tiempo muerto'
 Fluidité: 'Suavidad'
 Layout: 'Recorrido'
 
-Aucun: 'Ninguno'
-Flying Coaster: 'Flying Coaster'
-Harnais: 'Arnés de hombros/Arnés/Arneses'
-Harnais commun: 'Arnés de hombros común/Arnés común/Arneses común'
-Lap Bar commune: 'Lap bar común'
-Lap Bar individuelle: 'Lap bar individual'
-N/A: 'N/A'
+restraint.none: 'Ninguno'
+restraint.flying: 'Flying Coaster'
+restraint.shoulder: 'Arnés de hombros/Arnés/Arneses'
+restraint.shoulder.common: 'Arnés de hombros común/Arnés común/Arneses común'
+restraint.lap.common: 'Lap bar común'
+restraint.lap: 'Lap bar individual'
+restraint.na: 'N/A'
 
-Annoncé: 'Anunciado'
-Délocalisé: 'Deslocalizado'
-En chantier: 'En obras'
-En fonctionnement: 'Abierto'
-Fermé définitivement: 'Cerrado permanentemente'
-Fermé temporairement: 'Cerrado temporalmente'
-Inconnu: 'Desconocido'
-Retracké: 'Retracked'
+status.announced: 'Anunciado'
+status.relocated: 'Deslocalizado'
+status.construction: 'En obras'
+status.operating: 'Abierto'
+status.closed.definitely: 'Cerrado permanentemente'
+status.closed.temporarily: 'Cerrado temporalmente'
+status.unknown: 'Desconocido'
+status.retracked: 'Retracked'
 
-Espagne: 'España'
-Italie: 'Italia'
-Suède: 'Suecia'
-France: 'Francia'
-Pays-Bas: 'Países Bajos'
-Belgique: 'Bélgica'
-Autriche: 'Austria'
-Finlande: 'Finlandia'
-Norvège: 'Noruega'
-Danemark: 'Dinamarca'
-Suisse: 'Suiza'
-Royaume-Uni: 'Reino Unido'
-Allemagne: 'Alemania'
-États-Unis: 'Estados Unidos'
-Japon: 'Japón'
-Canada: 'Canadá'
-Taiwan: 'Taiwán'
-Corée du Sud: 'Corea del Sur'
-Australie: 'Australia'
-Russie: 'Rusia'
-Colombie: 'Colombia'
-Mexique: 'México'
-Guatemala: 'Guatemala'
-Ukraine: 'Ucrania'
-Chine: 'China'
-Hongrie: 'Hungría'
-Israël: 'Israel'
-Malaisie: 'Malasia'
-Portugal: 'Portugal'
-Argentine: 'Argentina'
-Brésil: 'Brasil'
-Thaïlande: 'Tailandia'
-Pologne: 'Polonia'
-Vietnam: 'Vietnam'
-Turquie: 'Turquía'
-Afrique du Sud: 'Africa del Sur'
-Singapour: 'Singapur'
-Pérou: 'Perú'
-Émirats arabes unis: 'Emiratos Árabes Unidos'
-Qatar: 'Katar'
-Inde: 'India'
-Indonésie: 'Indonesia'
-Irak: 'Irak'
-Nouvelle-Zélande: 'Nueva Zelanda'
-Liban: 'Líbano'
-N/A: 'N/A'
+country.spain: 'España'
+country.italy: 'Italia'
+country.sweden: 'Suecia'
+country.france: 'Francia'
+country.netherlands: 'Países Bajos'
+country.belgium: 'Bélgica'
+country.austria: 'Austria'
+country.finland: 'Finlandia'
+country.norway: 'Noruega'
+country.denmark: 'Dinamarca'
+country.switzerland: 'Suiza'
+country.uk: 'Reino Unido'
+country.germany: 'Alemania'
+country.usa: 'Estados Unidos'
+country.japan: 'Japón'
+country.canada: 'Canadá'
+country.taiwan: 'Taiwán'
+country.southkorea: 'Corea del Sur'
+country.australia: 'Australia'
+country.russia: 'Rusia'
+country.colombia: 'Colombia'
+country.mexico: 'México'
+country.guatemala: 'Guatemala'
+country.ukraine: 'Ucrania'
+country.china: 'China'
+country.hungary: 'Hungría'
+country.israel: 'Israel'
+country.malaysia: 'Malasia'
+country.portugal: 'Portugal'
+country.argentina: 'Argentina'
+country.brazil: 'Brasil'
+country.thailand: 'Tailandia'
+country.poland: 'Polonia'
+country.vietnam: 'Vietnam'
+country.turkey: 'Turquía'
+country.southafrica: 'Africa del Sur'
+country.singapore: 'Singapur'
+country.peru: 'Perú'
+country.uae: 'Emiratos Árabes Unidos'
+country.qatar: 'Katar'
+country.india: 'India'
+country.indonesia: 'Indonesia'
+country.iraq: 'Irak'
+country.newzealand: 'Nueva Zelanda'
+country.lebanon: 'Líbano'
+country.na: 'N/A'
+country.burma: 'Birmania'
+country.cyprus: 'Chipre'
+
