--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -58,7 +58,7 @@ coaster_ranking:
     reviews_number: '1 note|%count% notes'
     info:
         title: 'Participe au classement !'
-        text: 'Les classement des meilleurs coasters prend en compte les notes et les tops de tous les utilisateurs. <a href="%link_path%">Connecte toi</a> et commence à noter des coasters pour y participer. Plus tu as de notes et plus ton avis va peser dans le classement ! Prochaine mise à jour %date%.'
+        text: 'Le classement des meilleurs coasters prend en compte les notes et les tops de tous les utilisateurs. <a href="%link_path%">Connecte toi</a> et commence à noter des coasters pour y participer. Plus tu as de notes et plus ton avis va peser dans le classement ! Prochaine mise à jour %date%.'
 
 map_index:
     title: 'Carte des coasters'
