end refact trads

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -10,32 +10,41 @@ launch.air: 'Compressed air launch'
 launch.tire: 'Tire propelled launch'
 launch.electrical: 'Electrical launch'
 
-Vibrations: 'Rattle'
-Baffes: 'Headbanging'
-Trop court: 'Too short'
-Pas de théma: 'No theming'
-Débit: 'Capacity'
-Harnais: 'Restraints'
-Inversions: 'Inversions'
-Déception !: 'Disappointing!'
-Inconfort: 'Discomfort'
-Launch: 'Launch'
-A raser !: 'Tear it down!'
-Sans intérêt: 'Pointless'
-Airtimes: 'Airtimes'
-First drop: 'First Drop'
-Théma: 'Theming'
-Lap Bar: 'Lap Bar'
-Bonne suprise !: 'Nice surprise!'
-Situation: 'Location'
-Confort: 'Comfort'
-Vitesse: 'Pace'
-Fun: 'Fun'
-Chef d'oeuvre: 'Masterpiece'
-Intensité: 'Intensity'
-Temps mort: 'Dead spots'
-Fluidité: 'Smoothness'
-Layout: 'Layout'
+con.rattle: 'Rattle'
+con.headbanging: 'Headbanging'
+con.short: 'Too short'
+con.theming: 'No theming'
+con.capacity: 'Capacity'
+con.restraints: 'Restraints'
+con.inversions: 'Inversions'
+con.disappointing: 'Disappointing!'
+con.discomfort: 'Discomfort'
+con.launch: 'Launch'
+con.tearitdown: 'Tear it down!'
+con.pointless: 'Pointless'
+con.airtimes: 'Airtimes'
+con.deadspots: 'Dead spots'
+con.layout: 'Layout'
+con.intensity: 'Intensity'
+
+pro.airtimes: 'Airtimes'
+pro.firstdrop: 'First Drop'
+pro.theming: 'Theming'
+pro.capacity: 'Capacity'
+pro.lapbar: 'Lap Bar'
+pro.inversions: 'Inversions'
+pro.nicesurprise: 'Nice surprise!'
+pro.location: 'Location'
+pro.comfort: 'Comfort'
+pro.launch: 'Launch'
+pro.pace: 'Pace'
+pro.fun: 'Fun'
+pro.masterpiece: 'Masterpiece'
+pro.restraints: 'Restraints'
+pro.intensity: 'Intensity'
+pro.smoothness: 'Smoothness'
+pro.layout: 'Layout'
+pro.ejectors: 'Ejectors'
 
 restraint.none: 'None'
 restraint.flying: 'Flying Coaster'
