--- a/app/Resources/translations/database.es.yml
+++ b/app/Resources/translations/database.es.yml
@@ -4,43 +4,52 @@ launch.lift.cable: 'Ascensor de cable'
 launch.lift.spiral: 'Ascensor espiral'
 launch.lift.electrical: 'Ascensor eléctrico'
 launch.lift.vertical: 'Ascensor vertical'
-launch.lim: 'Motor de inducción lineal (LIM) / Motor síncrino lineal (LSM)'
+launch.lim: 'Motor de inducción lineal (LIM/LSM)'
 launch.hydraulic: 'Lanzamiento hidráulico'
 launch.air: 'Lanzamiento con aire comprimido'
 launch.tire: 'Lanzamiento neumático'
 launch.electrical: 'Lanzamiento eléctrico'
 
-Vibrations: 'Vibración'
-Baffes: 'Torta'
-Trop court: 'Demasiado corto'
-Pas de théma: 'Sin temer'
-Débit: 'Capacidad'
-Harnais: 'Arnés de hombros/Arnés/Arneses'
-Inversions: 'Inversiones'
-Déception !: '¡Decepción!'
-Inconfort: 'Incomodidad '
-Launch: 'Launch'
-A raser !: '¡Romper en pedazos!'
-Sans intérêt: 'Sin interés'
-Airtimes: 'Airtimes'
-First drop: 'Primera caída'
-Théma: 'Tematización'
-Lap Bar: 'Lap Bar'
-Bonne suprise !: '¡Buena sorpresa!'
-Situation: 'Situación'
-Confort: 'Confort/Comodidad'
-Vitesse: 'Velocidad'
-Fun: 'Divertido '
-Chef d'oeuvre: 'Obra maestra'
-Intensité: 'Intensidad'
-Temps mort: 'Tiempo muerto'
-Fluidité: 'Suavidad'
-Layout: 'Recorrido'
+con.rattle: 'Vibración'
+con.headbanging: 'Torta'
+con.short: 'Demasiado corto'
+con.theming: 'Sin temer'
+con.capacity: 'Capacidad'
+con.restraints: 'Arnés'
+con.inversions: 'Inversiones'
+con.disappointing: '¡Decepción!'
+con.discomfort: 'Incomodidad'
+con.launch: 'Launch'
+con.tearitdown: '¡Romper en pedazos!'
+con.pointless: 'Sin interés'
+con.airtimes: 'Airtimes'
+con.deadspots: 'Tiempo muerto'
+con.layout: 'Layout'
+con.intensity: 'Intensidad'
+
+pro.airtimes: 'Airtimes'
+pro.firstdrop: 'Primera caída'
+pro.theming: 'Tematización'
+pro.capacity: 'Capacidad'
+pro.lapbar: 'Lap Bar'
+pro.inversions: 'Inversiones'
+pro.nicesurprise: '¡Buena sorpresa!'
+pro.location: 'Situación'
+pro.comfort: 'Comodidad'
+pro.launch: 'Launch'
+pro.pace: 'Velocidad'
+pro.fun: 'Fun'
+pro.masterpiece: 'Obra maestra'
+pro.restraints: 'Arnés'
+pro.intensity: 'Intensidad'
+pro.smoothness: 'Suavidad'
+pro.layout: 'Layout'
+pro.ejectors: 'Ejectors'
 
 restraint.none: 'Ninguno'
 restraint.flying: 'Flying Coaster'
-restraint.shoulder: 'Arnés de hombros/Arnés/Arneses'
-restraint.shoulder.common: 'Arnés de hombros común/Arnés común/Arneses común'
+restraint.shoulder: 'Arnés'
+restraint.shoulder.common: 'Arnés común'
 restraint.lap.common: 'Lap bar común'
 restraint.lap: 'Lap bar individual'
 restraint.na: 'N/A'
