--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -10,32 +10,41 @@ launch.air: 'Propulsion à câble (pneumatique)'
 launch.tire: 'Propulsion à pneus'
 launch.electrical: 'Propulsion électrique'
 
-Vibrations: 'Vibrations'
-Baffes: 'Baffes'
-Trop court: 'Trop court'
-Pas de théma: 'Pas de théma'
-Débit: 'Débit'
-Harnais: 'Harnais'
-Inversions: 'Inversions'
-Déception !: 'Déception !'
-Inconfort: 'Inconfort'
-Launch: 'Launch'
-A raser !: 'A raser !'
-Sans intérêt: 'Sans intérêt'
-Airtimes: 'Airtimes'
-First drop: 'First drop'
-Théma: 'Théma'
-Lap Bar: 'Lap Bar'
-Bonne suprise !: 'Bonne suprise !'
-Situation: 'Situation'
-Confort: 'Confort'
-Vitesse: 'Vitesse'
-Fun: 'Fun'
-Chef d'oeuvre: 'Chef d''oeuvre'
-Intensité: 'Intensité'
-Temps mort: 'Temps mort'
-Fluidité: 'Fluidité'
-Layout: 'Layout'
+con.rattle: 'Vibrations'
+con.headbanging: 'Baffes'
+con.short: 'Trop court'
+con.theming: 'Pas de théma'
+con.capacity: 'Débit'
+con.restraints: 'Harnais'
+con.inversions: 'Inversions'
+con.disappointing: 'Déception !'
+con.discomfort: 'Inconfort'
+con.launch: 'Launch'
+con.tearitdown: 'A raser !'
+con.pointless: 'Sans intérêt'
+con.airtimes: 'Airtimes'
+con.deadspots: 'Temps mort'
+con.layout: 'Layout'
+con.intensity: 'Intensité'
+
+pro.airtimes: 'Airtimes'
+pro.firstdrop: 'First Drop'
+pro.theming: 'Théma'
+pro.capacity: 'Débit'
+pro.lapbar: 'Lap Bar'
+pro.inversions: 'Inversions'
+pro.nicesurprise: 'Bonne suprise !'
+pro.location: 'Situation'
+pro.comfort: 'Confort'
+pro.launch: 'Launch'
+pro.pace: 'Vitesse'
+pro.fun: 'Fun'
+pro.masterpiece: 'Chef d''oeuvre'
+pro.restraints: 'Harnais'
+pro.intensity: 'Intensité'
+pro.smoothness: 'Fluidité'
+pro.layout: 'Layout'
+pro.ejectors: 'Ejectors'
 
 restraint.none: 'Aucun'
 restraint.flying: 'Flying Coaster'
