--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -116,6 +116,8 @@ me:
         text: 'Voici ta bannière personnalisée, pour afficher fièrement tes coasters et ton Top !'
         getbbcode: 'Copier le BBCode (forums)'
         gethtml: 'Copier en html'
+    stats: 'Coaster ID'
+
 liste:
     list:
         title: 'Les derniers Tops'
